--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 canvas {
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: wheat;
 }
 body, html {
     height: 100%;
